<resources>
    <string name="app_name">CognitiveAssesmentTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="main_menu">Main Menu</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="game_one">Trail Making Test</string>
    <string name="game_two">Mini Mental State Examination</string>
    <string name="game_three">Halstead Reitan Battery Test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="stats">Stats</string>
    <string name="point">Point</string>
    <string name="back">Back</string>
    <string name="timeFormat">00:00</string>
    <string name="start">start</string>
    <string name="log_in">Log in</string>
    <string name="sign_in">Sign in</string>
    <string name="password">password</string>
    <string name="repeat_password">repeat password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="welcome_to_cognitiveapp">Welcome to CognitiveApp!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
</resources>