<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/mainMenuFragment">

    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="com.example.cognitiveassesmenttest.ui.MainMenuFragment"
        android:label="@string/main_menu"
        tools:layout="@layout/fragment_main_menu" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.cognitiveassesmenttest.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.cognitiveassesmenttest.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>