<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/trail_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4E768"
    android:orientation="vertical"
    tools:context=".ui.gameone.TrailMakingTestActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:fontFamily="@font/bowlby_one_sc"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="?attr/colorPrimary"
            android:fontFamily="@font/bowlby_one_sc"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <View
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/baloo_tammudu"
            android:text="@string/timeFormat"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp" >

        <ImageView
            android:id="@+id/bitmapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>